--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Yeokka.com</title>
 <body>
-  <meta http-equiv="refresh" content="0; url=https://www.youtube.com/@yeokka"></meta>
+  <meta http-equiv="refresh" content="0; url=https://www.youtube.com/@여까"></meta>
 </body>
 </html>
